--- a/README
+++ b/README
@@ -1,8 +1,10 @@
 mutant - language for web development
 
+[install requirements]
+gtest 1.7
+http://gittup.org/tup/
+
 [build]
-install http://gittup.org/tup/
-run:
 tup variant configs/debug.config
 tup
 copy build-debug/mutant/mutant to system PATH
